# epolis

./: CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  text.csv  vcpkg.json
.github/workflows/: build.yml  cmake-multi-platform.yml
cmake/: cpm_dependencies.cmake
src/epolis/: epolis.cpp  epolis.hpp  main.cpp  style.cpp  style.hpp
src/epolis/Utility/: operations.cpp  operations.h
src/epolis/frame/: main.cpp  main.hpp
src/epolis/frame/custom/: triangle_slider.cpp  triangle_slider.hpp
src/epolis/text/: bitmap.cpp  bitmap.h  dynamic_text.cpp  dynamic_text.hpp  lang.cpp  lang.hpp  text.cpp  text.hpp
src/epolis/utility/: layout.cpp  layout.h  operations.cpp  operations.h
